--- a/MyLibrary/src/PanelACreer/JFReview.form
+++ b/MyLibrary/src/PanelACreer/JFReview.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
@@ -219,8 +219,8 @@
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
                   <StringArray count="3">
                     <StringItem index="0" value="Reference"/>
-                    <StringItem index="1" value="Date"/>
-                    <StringItem index="2" value="Livre"/>
+                    <StringItem index="1" value="Livre"/>
+                    <StringItem index="2" value="N&#xb0; de Client"/>
                   </StringArray>
                 </Property>
               </Properties>
